@@ -1,6 +1,7 @@
 package P26_Reflexion;
 
 import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Modifier;
 import java.util.Arrays;
 
@@ -12,7 +13,7 @@ public class E08_ClassFields {
 			
 			Class<?> objClass = Class.forName("P26_Reflexion.TalkLoud");
 			
-			TalkLoud talker = (TalkLoud) objClass.newInstance();
+			TalkLoud talker = (TalkLoud) objClass.getDeclaredConstructor().newInstance();
 			talker.set("Hello");
 			talker.print();
 			System.out.println(objClass.getName());		
@@ -27,7 +28,10 @@ public class E08_ClassFields {
 			fields = Class.forName("java.lang.System").getFields();
 			Arrays.asList(fields).forEach(f -> describe(f));
 			
-		} catch (ClassNotFoundException | InstantiationException | IllegalAccessException e) {
+		} catch (ClassNotFoundException    | InstantiationException   | 
+				 IllegalAccessException    | IllegalArgumentException | 
+				 InvocationTargetException | NoSuchMethodException    | 
+				 SecurityException e) {
 			e.printStackTrace();
 		}
 		
@@ -38,7 +42,6 @@ public class E08_ClassFields {
 		System.out.println("Name: " + f.getName());
 		System.out.println("Modifier: " + Modifier.toString(f.getModifiers()));
 		System.out.println("Type: " + f.getType().getName());
-		System.out.println("Accessible: " + f.isAccessible());
 		System.out.println("-------------------");
 	}
 
